web/libraries/fractal/components/tests/filter/pass/raw.twig
{% set var %}
  <div>Hello</div>
{% endset %}

{{ var|raw }}
