web/libraries/fractal/components/tests/filter/fail/spaceless-filter.twig
{{ "<div>
        <strong>foo</strong>
    </div>
    "|spaceless }}

{# output will be <div><strong>foo</strong></div> #}
